2016/08/02: IGAS v103
    1. The mask system would display the position or size of the target.

2016/07/31: IGAS v102
    1. Add TopToBottom, LeftoToRight property to IFSecurePanel.

2016/07/31: IGAS v101
    1. Recode the whole unit system, to build a more clearly interface system for unit elements.
    2. Update for new PLoop System.

2016/07/22: IGAS v100
    1. Fix the memory increment for layoutpanel system.

2016/07/22: IGAS v99
    1. Add 'INCLUDE_NAME_PLATE_ONLY' for aura filter.

2016/07/22: IGAS v98
    1. The SPELL_UPDATE_USABLE doesn't work well, add a thread to force update usable for spell buttons.

2016/07/22: IGAS v97
    1. Remove useless codes.

2016/07/21: IGAS v96
    1. Update for wow 7.0 version.

2016/07/04: IGAS v95
    1. The secure panel can modify elements' position automatically.

2016/07/03: IGAS v94
    1. No debuff color for enemy's health bar.

2016/07/03: IGAS v93
    1. Improve the spell handler for clear bindings.

2016/07/03: IGAS v92
    1. Now the action buttons of the main bar would works well when been temporary shapeshifted.

2016/06/17: IGAS v91
    1. Fix the cooldown indicator display the number for blizzard's settings.

2016/06/17: IGAS v90
    1. Fix the frequent headlth and power for changing target.

2016/06/05: IGAS v89
    1. Update the stance cache when SPELL_CHANGES to fix the stance changed by talents.

2016/06/05: IGAS v88
    1. No longer clear the stance cache for some stance not work.

2016/06/04: IGAS v87
    1. Fix IFMana not hidden.

2016/06/03: IGAS v86
    1. Fix IFMana Error when unit not existed.

2016/06/03: IGAS v85
    1. No longer save wrapper in the wow's ui element to avoid some addons may save the whole ui element in saved variables.

2016/06/02: IGAS v84
    1. Fix drop down list not show.

2016/05/24: IGAS v83
    1. Use macro for spell action buttons, to avoid no use actions.
    2. Fix stance check.

2016/05/23: IGAS v82